--- a/index.html
+++ b/index.html
@@ -162,7 +162,13 @@
          <li> <a href="https://mega.nz/file/ZvBWTbpR#5IFwml3kHovzX56aq5nTc3QEquXPwzzX4Ap7bjbXSO4"> <strong> CARBONATE ROCKS. ORIGIN, OCCURRENCE AND CLASSIFICATION </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/tq4hAKgQ#NbEvTWYiyoAHLncH0pMQF9SrMH8oi9YdSnCDh7KL1yY"> <strong> CARBONATE SEDIMENTOLOGY AND PETROLOGY </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/Y7BBjYYa#ToDVO2NX9K55dceIfS0Z0M7_-O6LZ1MSVigJSkA8_-s"> <strong> CARBONATES IN CONTINENTAL SETTINGS. FACIES, ENVIRONMENTS, PROCESSES </strong> </li> </a> 
-         <li> <a href="https://mega.nz/file/1iIWlSRT#Vt8xzKo7J0PtsrKIJJdYXuPlMi5hYOO_hZNpnGMMFM4"> <strong> CARTILLA DE TEXTURAS VOLCANICAS </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/1iIWlSRT#Vt8xzKo7J0PtsrKIJJdYXuPlMi5hYOO_hZNpnGMMFM4"> <strong> CARTILLA DE TEXTURAS VOLCANICAS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/wqoTzSyI#CjGIS5FnN-7PTrVY1lLKaV_fc6c4KephWMUP7yaUV2E"> <strong> CARTOGRAFIA GEOLOGICA </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/JyRmwLQb#aoTiVG5ifaIv2KGi-xBhD0mhwElly5fWoSRvxM0kMUg"> <strong> Castro Dorado,1989.Petrografia Basica, Textura, Clasificacion y Nomenclatura roca </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/Z6JWBDrZ#_GGvqMdKKIlHVj-DkypHGmH6adK_usWx9HG13KlhAAQ"> <strong> CAVES. PROCESSES, DEVELOPMENT AND MANAGEMENT </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/tvgGlbhC#Ms-6kPFKQizitYhrhT30-ztkaBWfn-qE118afsfisZo"> <strong> CHALLENGES WITH GEOLOGIC MAPS </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/8uAxXZhK#2nxjagaN2tX6cuy3qyRpJQ4PppPUl44RKtNB2gTEjKA"> <strong> Challenges_to_global_mineral_resource_security_and </strong> </li> </a> 
+
 
 <legend> D </legend>
 
