--- a/index.html
+++ b/index.html
@@ -167,7 +167,13 @@
          <li> <a href="https://mega.nz/file/JyRmwLQb#aoTiVG5ifaIv2KGi-xBhD0mhwElly5fWoSRvxM0kMUg"> <strong> Castro Dorado,1989.Petrografia Basica, Textura, Clasificacion y Nomenclatura roca </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/Z6JWBDrZ#_GGvqMdKKIlHVj-DkypHGmH6adK_usWx9HG13KlhAAQ"> <strong> CAVES. PROCESSES, DEVELOPMENT AND MANAGEMENT </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/tvgGlbhC#Ms-6kPFKQizitYhrhT30-ztkaBWfn-qE118afsfisZo"> <strong> CHALLENGES WITH GEOLOGIC MAPS </strong> </li> </a> 
-         <li> <a href="https://mega.nz/file/8uAxXZhK#2nxjagaN2tX6cuy3qyRpJQ4PppPUl44RKtNB2gTEjKA"> <strong> Challenges_to_global_mineral_resource_security_and </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/8uAxXZhK#2nxjagaN2tX6cuy3qyRpJQ4PppPUl44RKtNB2gTEjKA"> <strong> Challenges_to_global_mineral_resource_security </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/l2R02KAA#iucKOsYuEwF7ZO27wktDLMyhW26x8kWvduzTkGdRN1E"> <strong> CHEMICAL AND ISOTOPIC GROUNDWATER HYDROLOGY </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/1mwgEIwY#pvJ4rHzdJG3VOrAXv-aQ7hbxn4xUn3pATnJXOuNdo-Q"> <strong> CHEMICAL COMPOSITION AND ELEMENT DISTRIBUTION IN THE EARTH'S CRUST </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/0noEGDZS#ks0rJQZASj5AvbXueCIGP2tE843wy5w9_HDMowxOmY0"> <strong>CHEMICAL FUNDAMENTALS OF GEOLOGY AND ENVIRONMENTAL GEOSCIENCE </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/JuQinK6K#NBgMS7wKjtDr-5dnxqyeMTHeOdqBPaDC7ZXcJqFXDOA"> <strong> CHEMICAL PETROLOGY, WITH APPLICATIONS TO THE TERRESTRIAL PLANETS AND METEORITES </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/9qQjiYLK#2gM15qxDcyQnbAVU_FS5r6_Jj6rloVoPBatoxS60SxE"> <strong> CHEMOSTRATIGRAPHY, CONCEPTS, TECHNIQUES, AND APPLICATIONS </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/lqhV1Lja#ArZoxfNwtaRevfwcS95UDztjBXxXdlSe8T9e8rCNUD4"> <strong> Ciencia e Ingenieria de Los Materiales </strong> </li> </a> 
 
 
 <legend> D </legend>
