--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
          <li> <a href="https://mega.nz/file/JuQinK6K#NBgMS7wKjtDr-5dnxqyeMTHeOdqBPaDC7ZXcJqFXDOA"> <strong> CHEMICAL PETROLOGY, WITH APPLICATIONS TO THE TERRESTRIAL PLANETS AND METEORITES </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/9qQjiYLK#2gM15qxDcyQnbAVU_FS5r6_Jj6rloVoPBatoxS60SxE"> <strong> CHEMOSTRATIGRAPHY, CONCEPTS, TECHNIQUES, AND APPLICATIONS </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/lqhV1Lja#ArZoxfNwtaRevfwcS95UDztjBXxXdlSe8T9e8rCNUD4"> <strong> Ciencia e Ingenieria de Los Materiales </strong> </li> </a> 
+<li> <a href="https://mega.nz/file/lywhDJIK#B_kBVYnyqBXJASv5hrMQz3SAtlI1iscjvCMgXzcc4ks"> <strong> ciencias dde la tierra tarbuck </strong> </li> </a> 
+<li> <a
+href="https://mega.nz/file/0mZHzagC#q_ULUSjxRtKg4pHCofQq9YZblSkS1qoTBM9qLdjU46w"> <strong> Clasificación de imágenes satelitales> </strong> </li> </a> 
 
 
 <legend> D </legend>
