--- a/index.html
+++ b/index.html
@@ -174,9 +174,13 @@
          <li> <a href="https://mega.nz/file/JuQinK6K#NBgMS7wKjtDr-5dnxqyeMTHeOdqBPaDC7ZXcJqFXDOA"> <strong> CHEMICAL PETROLOGY, WITH APPLICATIONS TO THE TERRESTRIAL PLANETS AND METEORITES </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/9qQjiYLK#2gM15qxDcyQnbAVU_FS5r6_Jj6rloVoPBatoxS60SxE"> <strong> CHEMOSTRATIGRAPHY, CONCEPTS, TECHNIQUES, AND APPLICATIONS </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/lqhV1Lja#ArZoxfNwtaRevfwcS95UDztjBXxXdlSe8T9e8rCNUD4"> <strong> Ciencia e Ingenieria de Los Materiales </strong> </li> </a> 
-<li> <a href="https://mega.nz/file/lywhDJIK#B_kBVYnyqBXJASv5hrMQz3SAtlI1iscjvCMgXzcc4ks"> <strong> ciencias dde la tierra tarbuck </strong> </li> </a> 
-<li> <a
-href="https://mega.nz/file/0mZHzagC#q_ULUSjxRtKg4pHCofQq9YZblSkS1qoTBM9qLdjU46w"> <strong> Clasificación de imágenes satelitales> </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/lywhDJIK#B_kBVYnyqBXJASv5hrMQz3SAtlI1iscjvCMgXzcc4ks"> <strong> ciencias dde la tierra tarbuck </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/0mZHzagC#q_ULUSjxRtKg4pHCofQq9YZblSkS1qoTBM9qLdjU46w"> <strong> Clasificación de imágenes satelitales </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/96BGQKjQ#J2EbOP2krJOD8jf1vY2IaAIgn2V7qCcjwEKqux78EmQ"> <strong> CLAVES PARA LA TAXONOMIA DE SUELOS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/Iux2zKqJ#G1zTyCHolR3kFlRAg1Hvd8GHhi88Ox6Z6W0K968LS_Y"> <strong> CLAY MINERALOGY, SPECTROSCOPIC AND CHEMICAL DETERMINATIVE METHODS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/xronyZjQ#SBVVPA8--dO0_bcY43ACeivqzJal6vl_NMHfnzBhocU"> <strong> CLAY MINERALS, A PHYSICO-CHEMICAL EXPLANATION OF THEIR OCCURRENCE </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/ImAnhIDR#MIYrNYDbZ0UJNmD1ESV6EqnaTuH95FvS8O5fsLMe5P0"> <strong> CLAYS AND CLAY MINERALS IN NATURAL AND SYNTHETIC SYSTEMS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/8rY0RJ4K#DJLIPHb1DLpsQWo4cJLpOlmlj5hPeSK9gPZEs6gftyo"> <strong> CLAYS </strong> </li> </a>
 
 
 <legend> D </legend>
