--- a/index.html
+++ b/index.html
@@ -181,6 +181,15 @@
          <li> <a href="https://mega.nz/file/xronyZjQ#SBVVPA8--dO0_bcY43ACeivqzJal6vl_NMHfnzBhocU"> <strong> CLAY MINERALS, A PHYSICO-CHEMICAL EXPLANATION OF THEIR OCCURRENCE </strong> </li> </a>
          <li> <a href="https://mega.nz/file/ImAnhIDR#MIYrNYDbZ0UJNmD1ESV6EqnaTuH95FvS8O5fsLMe5P0"> <strong> CLAYS AND CLAY MINERALS IN NATURAL AND SYNTHETIC SYSTEMS </strong> </li> </a>
          <li> <a href="https://mega.nz/file/8rY0RJ4K#DJLIPHb1DLpsQWo4cJLpOlmlj5hPeSK9gPZEs6gftyo"> <strong> CLAYS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/kyxDkZgA#zpGkCbR54HWzPh6nzyUT92O8ugfvstXLvcdVVcCm_XE"> <strong> CLIMATE AND CLIMATE CHANGE </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/supVELKY#1E5nygMVKqkrl8EKcjgziwz-bw9SE7G9txQolQp9xQ0"> <strong> CLIMATE CHANGE AND WATER RESOURCES </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/1zpHFKDb#ZvapTQCjqMQ2y3NJLdA9d1J19Fwdd14kXnJDRoYMaVw"> <strong> CN-4F.ROCAS Y MiNERALES </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/5uwACBxC#KlH4Wo2FinhEVWDbrTnR-FLBiifKFwbUTvwF9rFz4RA"> <strong> CN-5F.ROCAS IGNEAS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/sqp1nAYS#j6HZcHC7nbhA7phOOPvCrwAVvNXvB-G9ttfH-AM_CPs"> <strong> CN-6F. ROCAS METAMORFICAS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/kyAWBapJ#Rk_g70eJidh5c1YfKGoGG3WJvBp_deHDEN48-ZRVJBc"> <strong> CN-8F.ROCAS DE ORIGEN QUIMICO </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/M7QDiDgZ#-BVk9kwTMPasD0Xc_4DuEIXLzlGBDF19wKYDS-O9Xs0"> <strong> COAL MINING-RESEARCH, TECHNOLOGY AND SAFETY </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/IjQ0xAwK#2K8ibLVlC-BUP3OIo1iHSidLF6oNyIth67ENn4YYo1E"> <strong>COAL, OIL AND NATURAL GAS (ENERGY TODAY) </strong> </li> </a>
+         
 
 
 <legend> D </legend>
