--- a/index.html
+++ b/index.html
@@ -188,7 +188,12 @@
          <li> <a href="https://mega.nz/file/sqp1nAYS#j6HZcHC7nbhA7phOOPvCrwAVvNXvB-G9ttfH-AM_CPs"> <strong> CN-6F. ROCAS METAMORFICAS </strong> </li> </a>
          <li> <a href="https://mega.nz/file/kyAWBapJ#Rk_g70eJidh5c1YfKGoGG3WJvBp_deHDEN48-ZRVJBc"> <strong> CN-8F.ROCAS DE ORIGEN QUIMICO </strong> </li> </a>
          <li> <a href="https://mega.nz/file/M7QDiDgZ#-BVk9kwTMPasD0Xc_4DuEIXLzlGBDF19wKYDS-O9Xs0"> <strong> COAL MINING-RESEARCH, TECHNOLOGY AND SAFETY </strong> </li> </a>
-         <li> <a href="https://mega.nz/file/IjQ0xAwK#2K8ibLVlC-BUP3OIo1iHSidLF6oNyIth67ENn4YYo1E"> <strong>COAL, OIL AND NATURAL GAS (ENERGY TODAY) </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/IjQ0xAwK#2K8ibLVlC-BUP3OIo1iHSidLF6oNyIth67ENn4YYo1E"> <strong> COAL, OIL AND NATURAL GAS (ENERGY TODAY) </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/FiRAWYLB#pvhD2jShBVsev1wsY5JyngX36185pEMsnxGW5g8l7Dc"> <strong> COASTAL AND ESTUARINE MANAGEMENT </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/ImhFFTjR#h_d390fmuPv6mFa-adU-SCjg_PMMyl_mttLACWHHWSQ"> <strong> COASTAL GEOLOGY </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/1npQSI5a#yLM8FyJ-wieNtFH0rLJPBitQBYtg5bkudYBsDytCVJw"> <strong> COASTAL GEOMORPHOLOGY, AN INTRODUCTION </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/tzYFHYqT#_NZoMy-HvijdCHm1GQ6eUhAj5ReppiUFL2Ow1LCWEN8"> <strong> COASTAL PLANNING AND MANAGEMENT (2ND ED.) </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/4rwSFKJS#wjQuYBV9a2z_Ljc1NyCsbptXPz7E4jSDCp-7Un0yfns"> <strong> COASTAL SEDIMENTARY ENVIRONMENTS (2ND ED.) </strong> </li> </a>
          
 
 
