--- a/index.html
+++ b/index.html
@@ -156,11 +156,15 @@
          <li> <a href="https://mega.nz/file/EuYVFDAK#KuI7cCULxdnD20-q2kF0ekm3DaMg7rbZFB6ar7w9kCQ"> <strong> CALCAREOUS ALGAE </strong> </li>
          <li> <a href="https://mega.nz/file/orRWhIBA#pl3LzzQK91klTtLTHOXiFoxY692oGI7N8iCCefiFoW8"> <strong> CALCAREOUS NANNOFOSSIL BIOSTRATIGRAPHY </strong> </li> </a>
          <li> <a href="https://mega.nz/file/AiwkCRbJ#jKsGLlfL8yojelwVNNEOKVRGvjIO2X3dXQHzBFgLq0E"> <strong> CAPROCKS IN HYDROCARBON FIELDS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/YjQwTQqZ#-6nPRVlJj1sWI0674hyB5XYaEzdXYEyF30LOfcBUZDM"> <strong> CARBONATE CEMENTATION IN SANDSTONES </strong> </li> </a>
          <li> <a href="https://mega.nz/file/p3Z0wCpA#ccqtxlNyN7pwM7EHTZAFH8N-kdaq5ORnR5qvmmXMLZI"> <strong> CARBONATE DEPOSITIONAL SYSTEMS, ASSESSING DIMENSIONS AND CONTROLLING PARAMETERS </strong> </li> </a>
          <li> <a href="https://mega.nz/file/hrYmCCwJ#YED9SNs2dT8U5O6hydA4OxixTaHrLaeXaOUrJkFCS8M"> <strong> CARBONATE DIAGENESIS AND POROSITY </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/U2o0lLzB#1aM40ytMzcD1hvl1OMs1RF7pg0SWEPxB6qS76UBqj00"> <strong> CARBONATE MICROFABRICS </strong> </li> </a> 
-         <li> <a href="https://mega.nz/file/ZvBWTbpR#5IFwml3kHovzX56aq5nTc3QEquXPwzzX4Ap7bjbXSO4"> <strong> CARBONATE ROCKS. ORIGIN, OCCURRENCE AND CLASSIFICATION </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/onxkhLwR#t0R9vlKnSW5DPa21wqooK_4brFhDg8uo5mRdWUizaUU"> <strong> CARBONATE RESERVOIRS (2ND ED.) </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/ZvBWTbpR#5IFwml3kHovzX56aq5nTc3QEquXPwzzX4Ap7bjbXSO4"> <strong> CARBONATE ROCKS. ORIGIN, OCCURRENCE AND CLASSIFICATION </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/5uwlzKSL#A-y0maM2TwPWksio66ePqbniRK4J8u3y3kNcxZWT4i4"> <strong> CARBONATE SEDIMENT AND ROCKS UNDER MICROSCOPE </strong> </li> </a>
          <li> <a href="https://mega.nz/file/tq4hAKgQ#NbEvTWYiyoAHLncH0pMQF9SrMH8oi9YdSnCDh7KL1yY"> <strong> CARBONATE SEDIMENTOLOGY AND PETROLOGY </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/pzZGkDTD#UbiGccBHGSZCtABJa-nDsidoVLs3LaC9AUUgUT1kRr0"> <strong> CARBONATE SEQUENCE STRATIGRAPHY </strong> </li> </a>      
          <li> <a href="https://mega.nz/file/Y7BBjYYa#ToDVO2NX9K55dceIfS0Z0M7_-O6LZ1MSVigJSkA8_-s"> <strong> CARBONATES IN CONTINENTAL SETTINGS. FACIES, ENVIRONMENTS, PROCESSES </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/1iIWlSRT#Vt8xzKo7J0PtsrKIJJdYXuPlMi5hYOO_hZNpnGMMFM4"> <strong> CARTILLA DE TEXTURAS VOLCANICAS </strong> </li> </a>
          <li> <a href="https://mega.nz/file/wqoTzSyI#CjGIS5FnN-7PTrVY1lLKaV_fc6c4KephWMUP7yaUV2E"> <strong> CARTOGRAFIA GEOLOGICA </strong> </li> </a> 
@@ -170,11 +174,12 @@
          <li> <a href="https://mega.nz/file/8uAxXZhK#2nxjagaN2tX6cuy3qyRpJQ4PppPUl44RKtNB2gTEjKA"> <strong> Challenges_to_global_mineral_resource_security </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/l2R02KAA#iucKOsYuEwF7ZO27wktDLMyhW26x8kWvduzTkGdRN1E"> <strong> CHEMICAL AND ISOTOPIC GROUNDWATER HYDROLOGY </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/1mwgEIwY#pvJ4rHzdJG3VOrAXv-aQ7hbxn4xUn3pATnJXOuNdo-Q"> <strong> CHEMICAL COMPOSITION AND ELEMENT DISTRIBUTION IN THE EARTH'S CRUST </strong> </li> </a> 
-         <li> <a href="https://mega.nz/file/0noEGDZS#ks0rJQZASj5AvbXueCIGP2tE843wy5w9_HDMowxOmY0"> <strong>CHEMICAL FUNDAMENTALS OF GEOLOGY AND ENVIRONMENTAL GEOSCIENCE </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/0noEGDZS#ks0rJQZASj5AvbXueCIGP2tE843wy5w9_HDMowxOmY0"> <strong> CHEMICAL FUNDAMENTALS OF GEOLOGY AND ENVIRONMENTAL GEOSCIENCE </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/JuQinK6K#NBgMS7wKjtDr-5dnxqyeMTHeOdqBPaDC7ZXcJqFXDOA"> <strong> CHEMICAL PETROLOGY, WITH APPLICATIONS TO THE TERRESTRIAL PLANETS AND METEORITES </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/9qQjiYLK#2gM15qxDcyQnbAVU_FS5r6_Jj6rloVoPBatoxS60SxE"> <strong> CHEMOSTRATIGRAPHY, CONCEPTS, TECHNIQUES, AND APPLICATIONS </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/lqhV1Lja#ArZoxfNwtaRevfwcS95UDztjBXxXdlSe8T9e8rCNUD4"> <strong> Ciencia e Ingenieria de Los Materiales </strong> </li> </a> 
-         <li> <a href="https://mega.nz/file/lywhDJIK#B_kBVYnyqBXJASv5hrMQz3SAtlI1iscjvCMgXzcc4ks"> <strong> ciencias dde la tierra tarbuck </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/lywhDJIK#B_kBVYnyqBXJASv5hrMQz3SAtlI1iscjvCMgXzcc4ks"> <strong> ciencias dde la tierra tarbuck </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/gqoymBbS#SzmcEGECYY1qQXuDFQP61KI1KY5p8rIeuxJFra16Uw4"> <strong> Clarkson - Invertebrate Paleontology and Evolution </strong> </li> </a>
          <li> <a href="https://mega.nz/file/0mZHzagC#q_ULUSjxRtKg4pHCofQq9YZblSkS1qoTBM9qLdjU46w"> <strong> Clasificación de imágenes satelitales </strong> </li> </a>
          <li> <a href="https://mega.nz/file/96BGQKjQ#J2EbOP2krJOD8jf1vY2IaAIgn2V7qCcjwEKqux78EmQ"> <strong> CLAVES PARA LA TAXONOMIA DE SUELOS </strong> </li> </a>
          <li> <a href="https://mega.nz/file/Iux2zKqJ#G1zTyCHolR3kFlRAg1Hvd8GHhi88Ox6Z6W0K968LS_Y"> <strong> CLAY MINERALOGY, SPECTROSCOPIC AND CHEMICAL DETERMINATIVE METHODS </strong> </li> </a>
@@ -187,11 +192,13 @@
          <li> <a href="https://mega.nz/file/5uwACBxC#KlH4Wo2FinhEVWDbrTnR-FLBiifKFwbUTvwF9rFz4RA"> <strong> CN-5F.ROCAS IGNEAS </strong> </li> </a>
          <li> <a href="https://mega.nz/file/sqp1nAYS#j6HZcHC7nbhA7phOOPvCrwAVvNXvB-G9ttfH-AM_CPs"> <strong> CN-6F. ROCAS METAMORFICAS </strong> </li> </a>
          <li> <a href="https://mega.nz/file/kyAWBapJ#Rk_g70eJidh5c1YfKGoGG3WJvBp_deHDEN48-ZRVJBc"> <strong> CN-8F.ROCAS DE ORIGEN QUIMICO </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/QmACwBST#5HqIuJ07FylG5JNhTPk1cm1Qd0Wf7In_HIP_j2Lsa2E"> <strong> CN-20F-D.SISMICA DE REFLECCION </strong> </li> </a>
          <li> <a href="https://mega.nz/file/M7QDiDgZ#-BVk9kwTMPasD0Xc_4DuEIXLzlGBDF19wKYDS-O9Xs0"> <strong> COAL MINING-RESEARCH, TECHNOLOGY AND SAFETY </strong> </li> </a>
          <li> <a href="https://mega.nz/file/IjQ0xAwK#2K8ibLVlC-BUP3OIo1iHSidLF6oNyIth67ENn4YYo1E"> <strong> COAL, OIL AND NATURAL GAS (ENERGY TODAY) </strong> </li> </a>
          <li> <a href="https://mega.nz/file/FiRAWYLB#pvhD2jShBVsev1wsY5JyngX36185pEMsnxGW5g8l7Dc"> <strong> COASTAL AND ESTUARINE MANAGEMENT </strong> </li> </a>
          <li> <a href="https://mega.nz/file/ImhFFTjR#h_d390fmuPv6mFa-adU-SCjg_PMMyl_mttLACWHHWSQ"> <strong> COASTAL GEOLOGY </strong> </li> </a>
          <li> <a href="https://mega.nz/file/1npQSI5a#yLM8FyJ-wieNtFH0rLJPBitQBYtg5bkudYBsDytCVJw"> <strong> COASTAL GEOMORPHOLOGY, AN INTRODUCTION </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/83AEEI5A#r3imhxJBFWylt5QF1dAkXYa2Mh6m9KyB6MigbTVG7EM"> <strong> COASTAL KARST LANDFORMS </strong> </li> </a> 
          <li> <a href="https://mega.nz/file/tzYFHYqT#_NZoMy-HvijdCHm1GQ6eUhAj5ReppiUFL2Ow1LCWEN8"> <strong> COASTAL PLANNING AND MANAGEMENT (2ND ED.) </strong> </li> </a>
          <li> <a href="https://mega.nz/file/4rwSFKJS#wjQuYBV9a2z_Ljc1NyCsbptXPz7E4jSDCp-7Un0yfns"> <strong> COASTAL SEDIMENTARY ENVIRONMENTS (2ND ED.) </strong> </li> </a>
          <li> <a href="https://mega.nz/file/EyJXzRxB#9cUrbhbQcg6fP8pvXaWWomNcNTBMpwbc7kW_4whLMWI"> <strong> CODIGO ESTRATIGRAFICO NORTEAMERICANO </strong> </li> </a>
