--- a/index.html
+++ b/index.html
@@ -347,7 +347,12 @@
          <li> <a href="https://mega.nz/file/13ZxDbIL#4kgPUmY4CM1KmoETjQktNh9KbqB9Gu_-YwG5v6yQjuk"> <strong> manual de yacimientos tomo 1 </strong> </li> </a>
          <li> <a href="https://mega.nz/file/pv5g3IqQ#Y2XfAMqi92RRCc0K-g8kcwSlSjzYN0nKLTNFByfmhvM"> <strong> manual de yacimientos tomo 2 </strong> </li> </a>
          <li> <a href="https://mega.nz/file/0mQRxQYT#myzlE8xDY4JWp7p2ILCKyxx5KMBrBgyCGG32XgyXlWM"> <strong> MAPEO EN TERRENOS VOLCANICOS </strong> </li> </a>
-         <li> <a href="https://mega.nz/file/5qYxhDqS#frTCkhqK5HBV6HOmQgx_MAsFQM7cn6uJgUg3FZ0mCnk"> <strong> MARINE GEOLOGY </strong> </li> </a>      
+         <li> <a href="https://mega.nz/file/5qYxhDqS#frTCkhqK5HBV6HOmQgx_MAsFQM7cn6uJgUg3FZ0mCnk"> <strong> MARINE GEOLOGY </strong> </li> </a> 
+         <li> <a href="https://mega.nz/file/BiJAzRjQ#7qKO38CzbkpZNgIuqYWoArb3r6cWQrxOV0p9xkta6Qw"> <strong> MatterHomewoodetal.1980 flysch and Molasse </strong> </li> </a>      
+         <li> <a href="https://mega.nz/file/8qZRjZhQ#AOOCgEkiqn5a2G8HZwsFL3A6w8S_ugQsPp7Rb7aBS5E"> <strong> Mecanica de suelos - Crespo_vi </strong> </li> </a>      
+         <li> <a href="https://mega.nz/file/5uplmLxT#CyBnezMZctxRASONYayMD5dRUkjR2YeDNhDn_C1z-KI"> <strong> MEDICAL GEOLOGY </strong> </li> </a>      
+         <li> <a href="https://mega.nz/file/Q2R1naxY#Kr5anB0hohUp4KsAc1KnRC09Utn-Eg0GSMyaTEWy5mg"> <strong> MEGACITIES </strong> </li> </a>      
+         <li> <a href="https://mega.nz/file/9ioHCJYA#-80euLH28NlspuvvKfiiJxd8UDyOS0kMNZ9SloM5rms"> <strong> MESOZOIC AND CENOZOIC CARBONATE SYSTEMS OF EUROPE </strong> </li> </a>      
 <legend> N </legend>
 
 
