--- a/index.html
+++ b/index.html
@@ -510,17 +510,19 @@
     </div>
 
      <div class="paginas ">
-      <div class="paginas-facebook"> <a href="https://www.facebook.com/geoartlatam/"> GEOART </a></div>
+      <div class="paginas-facebook"> <a href="https://www.facebook.com/geoartlatam/"> Geoart </a></div>
 
-      <div class="facebook-logo"> <i class="fa-brands fa-facebook fa-2xl"></i> PAGINA </div>
+      <div class="facebook-logo"> <i class="fa-brands fa-facebook fa-2xl"></i> Pagina </div>
 
-      <div class="paginas-twitter"> <a href="https://twitter.com/geoartlatm"> @GEOART </a> </div>
+      <div class="paginas-twitter"> <a href="https://twitter.com/geoartlatm"> @Geoart </a> </div>
 
       <div class="twitter-logo"> <i class="fa-brands fa-twitter fa-2xl"></i> </div>
 
-      <div class="paginas-oficial"> <a href="https://www.facebook.com/angelodavid.leikperez/"> @GEOART LATAM </a> </div>
+      <div class="paginas-oficial"> <a href="https://www.facebook.com/angelodavid.leikperez/"> @Geoart Latam </a> </div>
 
-      <div class="oficial-logo"> <i class="fa-brands fa-facebook fa-2xl"></i> PERSONAL </div>
+      <div class="oficial-logo"> <i class="fa-brands fa-facebook fa-2xl"></i> Personal </div>
+
+      <div class="Instagram-logo"> <i class="fa-brands fa-instagram"> fa-2xl"></i> Instagram </div>
     </div>
 
 
