--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 
       <div class="oficial-logo"> <i class="fa-brands fa-facebook fa-2xl"></i> Personal </div>
 
-      <div class="Instagram-logo"> <i class="fa-brands fa-instagram"> fa-2xl"></i> Instagram </div>
+      <div class="Instagram-logo"> <i class="fa-brands fa-instagram" ></i> Instagram </div>
     </div>
 
 
