--- a/index.html
+++ b/index.html
@@ -522,6 +522,8 @@
 
       <div class="oficial-logo"> <i class="fa-brands fa-facebook fa-2xl"></i> Personal </div>
 
+       <div class="paginas- Instagram"> <a href="https://www.instagram.com/geoart_latam/"> @Geoart Latam </a> </div>
+
       <div class="Instagram-logo"> <i class="fa-brands fa-instagram fa-2xl" ></i> Instagram </div>
     </div>
 
