--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
        <div class="paginas- Instagram"> <a href="https://www.instagram.com/geoart_latam/"> @Geoart Latam </a> </div>
 
-      <div class="Instagram-logo"> <i class="fa-brands fa-instagram fa-2xl" ></i> Instagram </div>
+      <div class="Instagram-logo"> <i class="fa-brands fa-instagram fa-2xl" ></i> </div>
     </div>
 
 
