--- a/index.html
+++ b/index.html
@@ -526,7 +526,8 @@
 
       <div class="Instagram-logo"> <i class="fa-brands fa-instagram fa-2xl" ></i> </div>
     </div>
-
+center><a href="https://websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis">
+<img style="border: 0px solid; display: inline;" alt="contador de visitas" src="https://websmultimedia.com/contador-de-visitas.php?id=13799"></a><br><a href='https://websmultimedia.com/contador-de-visitas-gratis'>Contador de visitas</a><br><a href='http://boxindian.com/'>Crossfit en mairena</a></center>
 
 </body>
 
