--- a/index.html
+++ b/index.html
@@ -525,9 +525,11 @@
        <div class="paginas-Instagram"> <a href="https://www.instagram.com/geoart_latam/"> #Geoart Latam </a> </div>
 
       <div class="Instagram-logo"> <i class="fa-brands fa-instagram fa-2xl" ></i> </div>
+
+     <div class ="contador"> <center> <a href="https://geoartlibrary.github.io/" title="Gracias por la visita">
+<img style="border: 0px solid; display: inline;" alt="contador de visitas" src="https://websmultimedia.com/contador-de-visitas.php?id=13799"></a><br>Gracias por la visita <br></center> </div>
+
     </div>
-<center><a href="https://geoartlibrary.github.io/" title="Gracias por la visita">
-<img style="border: 0px solid; display: inline;" alt="contador de visitas" src="https://websmultimedia.com/contador-de-visitas.php?id=13799"></a><br>Gracias por la visita <br></center>
 
 </body>
 
