--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body>
   
   <div class="head">
-   <div class="head-title"> <strong> GEOART </strong> </div>
-   <div class="head-insignia"> Blog y librería geológica </div>  
-   <div class="head-referencia-nosotros"> sobre nosotros </div>
+   <div class="head-title">   <strong> GEOART </strong> </div>
+   <div class="head-insignia">  <a href="index.html"> Blog y librería geológica  </a> </div>  
+   <div class="head-referencia-nosotros"> <a href="post.html"> publicaciones </a>  </div>
    <div class="head-referencia-contactos"> contactos </div>
   </div>
 
