--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   
   <div class="head">
    <div class="head-title">   <strong> GEOART </strong> </div>
-   <div class="head-insignia">  <a href="index.html"> Blog y librería geológica  </a> </div>  
-   <div class="head-referencia-nosotros"> <a href="post.html"> publicaciones </a>  </div>
-   <div class="head-referencia-contactos"> contactos </div>
+   <div class="head-insignia"> <a href="index.html"> Blog y librería geológica </a> </div>  
+   <div class="head-referencia-nosotros"> <a href="post.html"> Publicaciones </a>   </div>
+   <div class="head-referencia-contactos"> <a href="Presentacion.html"> Presentación </a> </div>
   </div>
 
     <div class="blog ">
