--- a/post.html
+++ b/post.html
@@ -22,9 +22,9 @@
   
   <div class="head">
    <div class="head-title"> <strong> GEOART </strong> </div>
-   <div class="head-insignia"> <a href="index.html"> Blog y librería geológica </a> </div>  
+    <div class="head-insignia"> <a href="index.html"> Blog y librería geológica </a> </div>  
    <div class="head-referencia-nosotros"> <a href="post.html"> Publicaciones </a>   </div>
-   <div class="head-referencia-contactos"> contactos </div>
+   <div class="head-referencia-contactos"> <a href="Presentacion.html"> Presentación </a> </div>
   </div>
 
     <div class="blog ">
@@ -52,7 +52,7 @@
 
        </ul>
        </div>
-
+    </div>
 <!-- poner junto sino se crea espacio a futuro necesitamos javaescrip -->
       <!-- <div class="publicaciones"> <ul>
          <li>Tabla de condritas </li>
