--- a/post.html
+++ b/post.html
@@ -42,7 +42,11 @@
         <a href= "https://mega.nz/file/YzBxQCgI#X-NeHX4K-PWEtNm9ocgPZZudgHc26Wopj2NFzYbRPyY"> <img src="blob:https://mega.nz/9f6903eb-2156-4676-91f3-1792ea03f2e2"></a>
           <p><a href="https://epnecuador-my.sharepoint.com/:f:/g/personal/angelo_leica_epn_edu_ec/EsTSVjCO0whPrP8nivkxmf0BCHHJJTm5yvvWPxxzXV2QyA?e=IWbFrj"> <strong>  todas sus publicaciones para descargar (clave:geoart) </strong></a></p>
          </li>
-         
+        <li> <strong> Curso de Leapfrog Geo </strong> 
+        <p> Leapfrog Geo es un software de modelado 3D líder en el sector geológico. Fue diseñado por geólogos para geólogos, y ofrece procesos intuitivos, procesamiento rápido de datos y herramientas de visualización para ayudar a las personas a trabajar en equipo y facilitar la toma de decisiones. Con Leapfrog Geo, los usuarios pueden integrar, comunicar e interpretar rápidamente datos geológicos gracias al modelado 3D. El software permite crear y ajustar modelos geológicos con herramientas fáciles de usar, lo que ahorra tiempo en la interpretación. Además, Leapfrog Geo permite a los usuarios reducir el riesgo y la incertidumbre al probar nuevas ideas y ajustar su modelo en poco tiempo. Los usuarios también pueden compartir modelos 3D o cortes 2D con anotaciones para que los equipos y las partes interesadas sin conocimiento técnico tengan acceso a la misma información. Leapfrog Geo es compatible con muchos tipos de datos diferentes, como SIG, mapas e imágenes, sondeos de perforación, puntos, datos geofísicos, estructurales, cuadrículas, polilíneas y datos geoquímicos.</p>
+        <a href= "https://mega.nz/file/YzBxQCgI#X-NeHX4K-PWEtNm9ocgPZZudgHc26Wopj2NFzYbRPyY"> <img src="blob:https://mega.nz/9f6903eb-2156-4676-91f3-1792ea03f2e2"></a>
+          <p><a href="https://epnecuador-my.sharepoint.com/:f:/g/personal/angelo_leica_epn_edu_ec/En4mfbkGX05MgFAy0ZwMNFwBr3sbjhppBX1aLAk9ipyhaA?e=WltUYH"> <strong>  Curso de Leapfrog Geo (clave:Geoart) </strong></a></p>
+         </li>
 
        </ul>
        </div>
