Actualizar presentacion.html

--- a/presentacion.html
+++ b/presentacion.html
@@ -22,8 +22,8 @@
   
   <div class="head">
    <div class="head-title"> <strong> GEOART </strong> </div>
-   <div class="head-insignia"> <a href="index.html"> Blog y librería geológica </a> </div>  
-   <div class="head-referencia-nosotros"> <a href="post.html"> Publicaciones </a>   </div>
+   <div class="head-insignia"> <a href="index.html"> Librería Geológica </a> </div>  
+   <div class="head-referencia-nosotros"> <a href="post.html"> Post </a>   </div>
    <div class="head-referencia-contactos"> <a href="Presentacion.html"> Presentación </a> </div>
   </div>
 
