--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
  <head> 
   <title> GEOLOGY ART </title> <!-- titulo en la pestaña -->
-
+<meta charset="utf-8">
+  <meta name="author" content="geoartlatam">
+  <meta name="keywords" content="geoart, geoartlatam, geologia, biblioteca, gratis, cursos, libros, mienralogia, petrografia, sedimentologia, volcanes, sismologia, free, library, rocks, mineralogy, minerales ">
+  <meta name="audience" content="all">
+  <meta name="description" content="libreria geologica gratuita sin fines de lucro, Todo lo relacionado con las ciencias de la tierra, geología, geofísica, mineria, libros, cursos, papers y posts.">
+  <meta name="robots" content="index, all, follow">
+  <meta name="category" content="libreria, geologia">
+  
   <link rel= "stylesheet", type="text/css" href="geoartstile.css"> <!-- enlazar css -->
   <link rel="stylesheet" type="text/css" href="normalize.css"><!-- normalizar importante medificar un poco el codigo de normalize -->
+ 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- adaptar a celulares -->
 <link rel="shortcut icon" type= "imagen/x-icon" href="imagenGEOART/logo.ico">
