--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <div class="head-title">   <strong> GEOART </strong> </div>
    <div class="head-insignia"> <a href="index.html"> Librería Geológica </a> </div>  
    <div class="head-referencia-nosotros"> <a href="post.html"> Post </a>   </div>
-   <div class="head-referencia-contactos"> <a href="Presentacion.html"> Presentación </a> </div>
+   <div class="head-referencia-contactos"> <a href="presentacion.html"> Presentación </a> </div>
   </div>
 
     <div class="blog ">
