--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head> 
   <title> GEOLOGY ART </title> <!-- titulo en la pestaña -->
 <meta charset="utf-8">
+  <meta name="google-site-verification" content="nquPeOQQ4XPrhWRF3xkMdYq0tX5b3oMG7KtzqRZvXjc" />
   <meta name="author" content="geoartlatam">
   <meta name="keywords" content="geoart, geoartlatam, geologia, biblioteca, gratis, cursos, libros, mienralogia, petrografia, sedimentologia, volcanes, sismologia, free, library, rocks, mineralogy, minerales ">
   <meta name="audience" content="all">
