--- a/post.html
+++ b/post.html
@@ -47,6 +47,11 @@
         <a href= "https://mega.nz/file/YzBxQCgI#X-NeHX4K-PWEtNm9ocgPZZudgHc26Wopj2NFzYbRPyY"> <img src="blob:https://mega.nz/9f6903eb-2156-4676-91f3-1792ea03f2e2"></a>
           <p><a href="https://epnecuador-my.sharepoint.com/:f:/g/personal/angelo_leica_epn_edu_ec/En4mfbkGX05MgFAy0ZwMNFwBr3sbjhppBX1aLAk9ipyhaA?e=WltUYH"> <strong>  Curso de Leapfrog Geo (clave:Geoart) </strong></a></p>
          </li>
+         <li> <strong> Curso de estabilidad de taludes </strong> 
+        <p> Descripción del Curso: El Curso Online de Estabilidad de Taludes y Estructuras de Contención combina aspectos teóricos y prácticos. Proporciona los conocimientos fundamentales relacionados con la estabilidad de taludes en obras de Ingeniería. Durante el curso, se aborda la problemática asociada al comportamiento y respuesta geodinámica de los suelos que conforman los taludes. Además, se evalúa su solicitación ante acciones sísmicas, condiciones hidrológicas y diversas actividades antrópicas que pueden afectar su estabilidad.</p>
+          <p><a href="https://epnecuador-my.sharepoint.com/:f:/g/personal/angelo_leica_epn_edu_ec/EpfGaAmoUwFKn0uWuohX6h4BMw3oMtKFN57-7vx7-3mw3w?e=iCyzXp"> <strong>  Curso de estabilidad de taludes (clave:Geoart) </strong></a></p>
+         </li>
+
 
        </ul>
        </div>
