--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container fa fa-heart">
         <div class="contenido">
-            <h1>Te amo</h1>
-            <p>Feliz día de San Valentín</p>
+            <h1>Te amo amorcito, eres lo mas importante para mi te adoro, eres mi reinita, y aunque estemos lejos, siempre voy a encontrar formas de hacer feliz, como esta</h1>
+            <p>Feliz día de San Valentín, si encontraste este mensaje estas invitada al mega revento del sabado.</p>
         </div>
     </div>
 </body>
