--- a/indes.html
+++ b/indes.html
@@ -15,6 +15,8 @@
         <div class="contenido">
             <h1>Te amo</h1>
             <p>Feliz día de San Valentín</p>
+            <p>siempre buscar formas de hacerte feliz, aunque sea a la distancia</p
+              <p>entrada para una noche de pasion sabado 17 de febrero</p>                                                                        
         </div>
     </div>
 </body>
