--- a/indes.html
+++ b/indes.html
@@ -13,11 +13,10 @@
 <body>
     <div class="container fa fa-heart">
         <div class="contenido">
-            <h1>Te amo</h1>
-            <p>Feliz día de San Valentín</p>                                                                     
+            <h1>Te amo cuchurrumina </h1>
+            <p>Feliz día de San Valentín, siempre buscare formas de hacerte feliz, aunque sea a distancia, vale paraa una noche de pasión</p>                                                                     
         </div>
-                    <p>siempre buscar formas de hacerte feliz, aunque sea a la distancia</p
-              <p>entrada para una noche de pasion sabado 17 de febrero</p>   
+
     </div>
 </body>
 </html>
