--- a/indes.html
+++ b/indes.html
@@ -14,7 +14,7 @@
     <div class="container fa fa-heart">
         <div class="contenido">
             <h1>Te amo cuchurrumina </h1>
-            <p>Feliz día de San Valentín, siempre buscare formas de hacerte feliz, aunque sea a distancia, vale paraa una noche de pasión</p>                                                                     
+            <p>Feliz día de San Valentín, siempre buscare formas de hacerte feliz, aunque sea a distancia, vale para una noche de pasión el 17 de febrero</p>                                                                     
         </div>
 
     </div>
