--- a/index.html
+++ b/index.html
@@ -131,10 +131,12 @@
          <li> <a href="https://mega.nz/file/k7RzWTbS#-AHgaVM-NrKRLa8junKStJyLqWuptVaLkOAJ8Y7CcfE"> <strong> APPLIED COAL PETROLOGY </strong> </li> </a>
          <li> <a href="https://mega.nz/file/A3hTXJKB#wsPtmY1kI9vNbRRy57k0AnMOjRPtud5PvQX5KUfLss0"> <strong> APPLIED CONCEPTS OF STRUCTURAL GEOLOGY IN HYDROCARBON EXPLORATION </strong> </li> </a>
          <li> <a href="https://mega.nz/file/03Yn2QbK#gKYLih1x09mg0uM1JIJT-qha-HYYpbv5q-kxqaJ6ccQ"> <strong> Applied Geophysics D._H._Griffiths </strong> </li> </a>
-         <li> <a href="https://mega.nz/file/Unp0ECAQ#3GmdmGOb13vB46Cfu19JKyuT6rjJmnoOeb7_Om8dr4I"> <strong> APPLIED GEOPHYSICS </strong> </li> </a>
-
-
-
+         <li> <a href="https://mega.nz/file/ZqIVnSYC#u1TUo8l8i8QQQ2UOEzXobXliMKkATtVz-HO2Tm0x0nc"> <strong> APPLIED GEOPHYSICS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/ZqIVnSYC#u1TUo8l8i8QQQ2UOEzXobXliMKkATtVz-HO2Tm0x0nc"> <strong> APPLIED GEOSTATISTICS FOR RESERVOIR CHARACTERIZATION </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/RnISQC4L#uKy1RbtaeMD8bIP3HpqikwMgXtx36Q-4fDxFB_WTL9o"> <strong> APPLIED GEOTHERMICS FOR PETROLEUM ENGINEERS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/RmZU2ayL#24WmsJ9nL73UCU6U1ZGPWYbcCzvgU3oZ3OCfXsDiU-Y"> <strong> APPLIED GEOTHERMICS </strong> </li> </a>
+         <li> <a href="https://mega.nz/file/0y51lIaZ#z3knXJNchghlkHFtBWqYx0qP1sTC_f6iDftJyMi6DFM"> <strong> APPLIED HYDROGEOLOGY OF FRACTURED ROCKS </strong> </li> </a>
+    
 
 <legend> B </legend>
          <li> <a href=https://mega.nz/file/k7pHgAjL#JsTi6ZJF6Z1auW6EERD9Ls58ntkogJYauHN3zx4g55k> <strong> Backbone of the Americas: Shallow Subduction, Plateau Uplift, and Ridge and Terrane Collision </strong> </li>
